force-app/main/default/objects/Payment_Milestones__c/fields/PS_Actual_Charges_1_Value__c.field-meta.xml
<CustomField>
    <fullName>PS_Actual_Charges_1_Value__c</fullName>
    <formula>(Quotation__r.Total_Agreement_Value_Bucket__c * Charge1Percentage__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PS Actual Charges 1 Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>