force-app/main/default/objects/Payment_Milestones__c/fields/Quotation__c.field-meta.xml
<CustomField>
    <fullName>Quotation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quotation</label>
    <referenceTo>Quotation__c</referenceTo>
    <relationshipLabel>Payment Milestones</relationshipLabel>
    <relationshipName>Payment_Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>