force-app/main/default/objects/Payment_Milestones__c/fields/Raise_Demand_Tracker_Created__c.field-meta.xml
<CustomField>
    <fullName>Raise_Demand_Tracker_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Raise Demand Tracker Created</label>
    <type>Checkbox</type>
</CustomField>