force-app/main/default/objects/Payment_Milestones__c/fields/Registration_Charges_Amount__c.field-meta.xml
<CustomField>
    <fullName>Registration_Charges_Amount__c</fullName>
    <formula>Quotation__r.Registration_Charges_Quot__c *  Registration_Charges_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registration Charges Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>