force-app/main/default/objects/Payment_Milestones__c/fields/Registration_Charges_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Registration_Charges_Percentage__c</fullName>
    <label>Registration Charges Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>