force-app/main/default/objects/Payment_Milestones__c/fields/Skip_Auto_Demand_Generation__c.field-meta.xml
<CustomField>
    <fullName>Skip_Auto_Demand_Generation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Auto Demand Generation</label>
    <type>Checkbox</type>
</CustomField>