force-app/main/default/objects/Payment_Milestones__c/fields/SPA_Milestone__c.field-meta.xml
<CustomField>
    <fullName>SPA_Milestone__c</fullName>
    <formula>IF(Installment__c=&quot;Booking Amount&quot;,Milestone_Name__c,
			IF(NOT(CONTAINS(Milestone_Name__c,&apos;Completion&apos;)),(Milestone_Name__c &amp; &apos;(*)&apos;),(Milestone_Name__c &amp; &apos;(**)&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SPA Milestone</label>
    <type>Text</type>
</CustomField>