force-app/main/default/objects/Payment_Milestones__c/fields/SPA_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>SPA_Payment_Date__c</fullName>
    <formula>IF(OR(CONTAINS(Milestone_Name__c,&quot;Completion&quot;),CONTAINS(Milestone_Name__c,&quot;completion&quot;)),&apos;-&apos;,
	TEXT(DAY(Milestone_Due_Date__c))	+&quot;/&quot; +TEXT(MONTH(Milestone_Due_Date__c))+&quot;/&quot; +TEXT(YEAR(Milestone_Due_Date__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SPA Payment Date</label>
    <type>Text</type>
</CustomField>