force-app/main/default/objects/Payment_Milestones__c/fields/Sub_project_Tower__c.field-meta.xml
<CustomField>
    <fullName>Sub_project_Tower__c</fullName>
    <formula>Quotation__r.Sub_project_Tower__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub-project Tower</label>
    <type>Text</type>
</CustomField>