force-app/main/default/objects/Payment_Milestones__c/fields/Time_Period__c.field-meta.xml
<CustomField>
    <fullName>Time_Period__c</fullName>
    <label>Time Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Days</fullName>
            </value>
            <value>
                <fullName>Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>