force-app/main/default/objects/Payment_Milestones__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <formula>Agreement_Value_Amount__c  +  MSEB_Charges_Amount__c  +  Water_Connection_Charges_Amount__c  +  Infrastructure_Charges_Amount__c  +  Development_Charges_Amount__c  +  Stamp_Duty_Amount__c  +  MVAT_Amount__c  +  Registration_Charges_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>