force-app/main/default/objects/Payment_Milestones__c/fields/Total_Installment_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_Installment_Tax__c</fullName>
    <formula>IF((Charge1Name__c = &apos;Basic&apos;) ,  C1_CGST__c, IF((Charge2Name__c = &apos;Basic&apos;) ,  C2_CGST__c, IF((Charge3Name__c = &apos;Basic&apos;) ,  C3_CGST__c, IF((Charge4Name__c = &apos;Basic&apos;) ,  C4_CGST__c, IF((Charge5Name__c = &apos;Basic&apos;) ,  C5_CGST__c, IF((Charge6Name__c = &apos;Basic&apos;) ,  C6_CGST__c, IF((Charge7Name__c = &apos;Basic&apos;) ,  C7_CGST__c, IF((Charge8Name__c = &apos;Basic&apos;) ,  C8_CGST__c, IF((Charge9Name__c = &apos;Basic&apos;) ,  C9_CGST__c, IF((Charge10Name__c = &apos;Basic&apos;) ,  C10_CGST__c, 0)))))))))) +
IF((Charge1Name__c = &apos;Floor Rise&apos;) ,  C1_CGST__c, IF((Charge2Name__c = &apos;Floor Rise&apos;) ,  C2_CGST__c, IF((Charge3Name__c = &apos;Floor Rise&apos;) ,  C3_CGST__c, IF((Charge4Name__c = &apos;Floor Rise&apos;) ,  C4_CGST__c, IF((Charge5Name__c = &apos;Floor Rise&apos;) ,  C5_CGST__c, IF((Charge6Name__c = &apos;Floor Rise&apos;) ,  C6_CGST__c, IF((Charge7Name__c = &apos;Floor Rise&apos;) ,  C7_CGST__c, IF((Charge8Name__c = &apos;Floor Rise&apos;) ,  C8_CGST__c, IF((Charge9Name__c = &apos;Floor Rise&apos;) ,  C9_CGST__c, IF((Charge10Name__c = &apos;Floor Rise&apos;) ,  C10_CGST__c, 0)))))))))) +
IF((Charge1Name__c = &apos;PLC&apos;) ,  C1_CGST__c, IF((Charge2Name__c = &apos;PLC&apos;) ,  C2_CGST__c, IF((Charge3Name__c = &apos;PLC&apos;) ,  C3_CGST__c, IF((Charge4Name__c = &apos;PLC&apos;) ,  C4_CGST__c, IF((Charge5Name__c = &apos;PLC&apos;) ,  C5_CGST__c, IF((Charge6Name__c = &apos;PLC&apos;) ,  C6_CGST__c, IF((Charge7Name__c = &apos;PLC&apos;) ,  C7_CGST__c, IF((Charge8Name__c = &apos;PLC&apos;) ,  C8_CGST__c, IF((Charge9Name__c = &apos;PLC&apos;) ,  C9_CGST__c, IF((Charge10Name__c = &apos;PLC&apos;) ,  C10_CGST__c, 0)))))))))) +
IF((Charge1Name__c = &apos;Base Premium&apos;) ,  C1_CGST__c, IF((Charge2Name__c = &apos;Base Premium&apos;) ,  C2_CGST__c, IF((Charge3Name__c = &apos;Base Premium&apos;) ,  C3_CGST__c, IF((Charge4Name__c = &apos;Base Premium&apos;) ,  C4_CGST__c, IF((Charge5Name__c = &apos;Base Premium&apos;) ,  C5_CGST__c, IF((Charge6Name__c = &apos;Base Premium&apos;) ,  C6_CGST__c, IF((Charge7Name__c = &apos;Base Premium&apos;) ,  C7_CGST__c, IF((Charge8Name__c = &apos;Base Premium&apos;) ,  C8_CGST__c, IF((Charge9Name__c = &apos;Base Premium&apos;) ,  C9_CGST__c, IF((Charge10Name__c = &apos;Base Premium&apos;) ,  C10_CGST__c, 0)))))))))) +
IF((Charge1Name__c = &apos;Corner Premium&apos;) ,  C1_CGST__c, IF((Charge2Name__c = &apos;Corner Premium&apos;) ,  C2_CGST__c, IF((Charge3Name__c = &apos;Corner Premium&apos;) ,  C3_CGST__c, IF((Charge4Name__c = &apos;Corner Premium&apos;) ,  C4_CGST__c, IF((Charge5Name__c = &apos;Corner Premium&apos;) ,  C5_CGST__c, IF((Charge6Name__c = &apos;Corner Premium&apos;) ,  C6_CGST__c, IF((Charge7Name__c = &apos;Corner Premium&apos;) ,  C7_CGST__c, IF((Charge8Name__c = &apos;Corner Premium&apos;) ,  C8_CGST__c, IF((Charge9Name__c = &apos;Corner Premium&apos;) ,  C9_CGST__c, IF((Charge10Name__c = &apos;Corner Premium&apos;) ,  C10_CGST__c, 0))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Installment Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>