force-app/main/default/objects/Payment_Milestones__c/fields/Total_Installment_USD__c.field-meta.xml
<CustomField>
    <fullName>Total_Installment_USD__c</fullName>
    <formula>Total_Installment__c/3.6725</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Installment (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>