force-app/main/default/objects/Payment_Milestones__c/fields/Tower__c.field-meta.xml
<CustomField>
    <fullName>Tower__c</fullName>
    <formula>Quotation__r.Unit__r.Tower__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tower</label>
    <type>Text</type>
</CustomField>