force-app/main/default/objects/Payment_Milestones__c/fields/Unit_No__c.field-meta.xml
<CustomField>
    <fullName>Unit_No__c</fullName>
    <formula>Quotation__r.Unit__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit No</label>
    <type>Text</type>
</CustomField>