force-app/main/default/objects/Payment_Milestones__c/fields/Unit_Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Purchase_Price__c</fullName>
    <formula>Quotation__r.Total_of_Amount_Taxes_Agreement_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Purchase Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>