force-app/main/default/objects/Payment_Milestones__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Charge_1Value__c</columns>
    <columns>Charge_2Value__c</columns>
    <columns>Charge_3Value__c</columns>
    <columns>Charge_4Value__c</columns>
    <columns>Charge_5Value__c</columns>
    <columns>Charge_6Value__c</columns>
    <columns>Charge_7Value__c</columns>
    <columns>Charge_8Value__c</columns>
    <columns>Demand_Raised__c</columns>
    <columns>is_demand_raised__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>is_demand_raised__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All</label>
</ListView>