force-app/main/default/objects/Payment_Milestones__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Unit_No__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Installment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Quotation__c</field>
        <operation>equals</operation>
        <value>SH-303718</value>
    </filters>
    <label>All</label>
</ListView>